Repaired Cms overflow problem

--- a/core_table_cms/core_table_cms.css
+++ b/core_table_cms/core_table_cms.css
@@ -18,9 +18,13 @@ table, th, td {
     border-bottom: 1px solid #ddd;
 }
 table {
-    width: 100%;
+	overflow-x:auto;
+ 
 }
 
 th {
     height: 30px;
 }
+#core-table-cms-content {
+    overflow-x:auto;
+    }
